bg(gamelog): Fix gamelog
- Fix UI layout issues
- Abstract gamesWon query
- Update game data

[Finishes #159232995]

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -55,6 +55,23 @@ body {
   background-color: #236231;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.mb-0 {
+  margin-bottom: 0rem;
+}
+
+.log-card-item {
+  height: 111px;
+  overflow-y: auto;
+}
+
+.mt-0 {
+  margin-top: 0rem;
+}
+
 #game {
   margin-right: 2rem;
 }
